[gd_scene load_steps=5 format=3 uid="uid://dsptsw5k28qug"]

[ext_resource type="Script" path="res://menu/item_popup.gd" id="1_6nrmq"]
[ext_resource type="FontFile" uid="uid://cwsklbj8xil82" path="res://assets/fonts/junction_bold.otf" id="2_wyqca"]

[sub_resource type="Theme" id="Theme_44jpm"]
default_font = ExtResource("2_wyqca")
default_font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhv6r"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.257456, 0.257459, 0.27636, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0.784314)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ItemPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_6nrmq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupPanel" type="PopupPanel" parent="CanvasLayer"]
unique_name_in_owner = true
size = Vector2i(250, 250)
visible = true
mouse_passthrough = true
min_size = Vector2i(250, 250)
max_size = Vector2i(500, 500)
theme = SubResource("Theme_44jpm")
theme_override_styles/panel = SubResource("StyleBoxFlat_vhv6r")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupPanel"]
offset_left = 15.0
offset_top = 15.0
offset_right = 235.0
offset_bottom = 235.0
theme_override_constants/separation = 15

[node name="Name" type="Label" parent="CanvasLayer/PopupPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Status"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="StrenghType" type="Label" parent="CanvasLayer/PopupPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Strengh
"

[node name="StrenghValue" type="Label" parent="CanvasLayer/PopupPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="AttributeType" type="Label" parent="CanvasLayer/PopupPanel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Strengh
"

[node name="AttributeValue" type="Label" parent="CanvasLayer/PopupPanel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
